# airstrike

./: .gitignore  README.md  docker-compose.yml  generate_nginx.py
agent/: main.c
agent/C-Agent/: README.md  main.c  makefile
agent/Rust-Agent/: Cargo.toml
agent/Rust-Agent/src/: command_handler.rs  main.rs  network.rs  system_info.rs  utils.rs
backend/: Dockerfile  README.md  app.py  config.py  custom.py  database.sqlite  models.py  requirements.txt  routes.py
demo/: app.py  config.py
frontend/: Dockerfile  README.md  app.py  requirements.txt
frontend/airstrike/: package-lock.json  package.json
frontend/airstrike/public/: index.html
frontend/airstrike/src/: App.css  App.js  Header.jsx  ListItems.jsx  SocketContext.jsx  Upload.jsx
